[gd_scene load_steps=7 format=2]

[ext_resource path="res://PixelArt/FloraAssetPack/Ground Sprites/Flora/Flora Ground Grass.png" type="Texture" id=1]
[ext_resource path="res://World/TallGrass.gd" type="Script" id=2]
[ext_resource path="res://Action RPG Resources/Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://World/WorldElementSwing.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/offset = 0.5
shader_param/speed = 1.0
shader_param/starting = -10.0
shader_param/spread = 0.05
shader_param/Shift_Hue = 1.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.43771
height = 0.0

[node name="TallGrass" type="Node2D"]
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -1.77636e-15, 1.31102 )
scale = Vector2( 1.50568, 1.16388 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -5.37796 )
texture = ExtResource( 1 )
vframes = 4
hframes = 3

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.062714, 0.37754 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
